--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -1,9 +1,9 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jdbc.driver=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc:mysql://192.168.1.100:3306/qoocc_dev?relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-jdbc.username=dev
-jdbc.password=dev!@#
+jdbc.url=jdbc:mysql://127.0.0.1:3306/qoocc?relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+jdbc.username=root
+jdbc.password=test
 
 #hibernate settings
 hibernate.show_sql=false
@@ -11,8 +11,3 @@ hibernate.format_sql=true
 #hibernate.ehcache_config_file=/ehcache/ehcache-hibernate-local.xml
 #hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
 hibernate.hbm2ddl.auto=none
-
-#主机地址
-mongo.host=192.168.1.101
-#端口
-mongo.port=27017
