加入jdbc多数据源

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -5,6 +5,11 @@ jdbc.url=jdbc:mysql://127.0.0.1:3306/qoocc?relaxAutoCommit=true&zeroDateTimeBeha
 jdbc.username=root
 jdbc.password=test
 
+jdbc.url1=jdbc:mysql://192.168.1.100:3306/db1?relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+jdbc.username1=dev
+jdbc.password1=dev!@#
+
+
 #hibernate settings
 hibernate.show_sql=false
 hibernate.format_sql=true
