加入分布式事务配置和测试用例

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,16 @@
 			<version>3.1</version>
 		</dependency>
 		<!-- 动态代理类库 -->
+
+
+		<!-- 分布式事务 -->
+		<dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>transactions-jdbc</artifactId>
+			<version>3.8.0</version>
+		</dependency>
+		<!-- 分布式事务 -->
+
 	</dependencies>
 	<!-- 包依赖配置 -->
 
