加入hibernate多数据源及测试用例，未加入hibernate JTA分布式事务

--- a/src/main/resources/properties/application.properties
+++ b/src/main/resources/properties/application.properties
@@ -11,7 +11,7 @@ jdbc.password1=dev!@#
 
 
 #hibernate settings
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.format_sql=true
 #hibernate.ehcache_config_file=/ehcache/ehcache-hibernate-local.xml
 #hibernate.cache.provider_class=org.hibernate.cache.EhCacheProvider
