--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
 		</dependency>
 		<!-- 分布式事务 -->
 
+       <!-- mybatis 数据映射库配置 -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.2.8</version>
+		</dependency>
+		 <!-- mybatis 数据映射库配置 -->
 	</dependencies>
 	<!-- 包依赖配置 -->
 
@@ -183,6 +190,43 @@
 	</build>
 	<!-- 构建选项配置 -->
 
+
+	<!-- enforcer插件, 避免被依赖的依赖引入过期的jar? -->
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-enforcer-plugin</artifactId>
+		<version>1.3.1</version>
+		<executions>
+			<execution>
+				<id>enforce-banned-dependencies</id>
+				<goals>
+					<goal>enforce</goal>
+				</goals>
+				<configuration>
+					<rules>
+						<requireMavenVersion>
+							<version>3.0.3</version>
+						</requireMavenVersion>
+						<requireJavaVersion>
+							<version>1.6</version>
+						</requireJavaVersion>
+						<bannedDependencies>
+							<searchTransitive>true</searchTransitive>
+							<excludes>
+								<exclude>commons-logging</exclude>
+								<exclude>aspectj:aspectj*</exclude>
+								<!-- <exclude>org.springframework</exclude> -->
+							</excludes>
+							<includes>
+								<!-- <include>org.springframework:*:4.0.*</include> -->
+							</includes>
+						</bannedDependencies>
+					</rules>
+					<fail>true</fail>
+				</configuration>
+			</execution>
+		</executions>
+	</plugin>
 
 	<!-- 全局属性配置 -->
 	<properties>
