--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.31</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.12.3</version>
+		</dependency>
+
 		<!-- 数据库相关包 -->
 
 
