--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,17 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.3.2.RELEASE</version>
 		</dependency>
 		<!-- spring 包 end -->
 
@@ -177,13 +183,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.31</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.3</version>
-		</dependency>
-
 		<!-- 数据库相关包 -->
 
 
@@ -240,7 +239,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- 设置版本变量，方便版本升级管理 start -->
-		<org.springframework.version>3.0.2.RELEASE</org.springframework.version>
+		<org.springframework.version>3.2.7.RELEASE</org.springframework.version>
 		<org.apache.solr.version>3.1.0</org.apache.solr.version>
 		<ch.qos.logback.version>1.1.2</ch.qos.logback.version>
 		<org.apache.struts.version>2.3.15.2</org.apache.struts.version>
