--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
 			<version>${org.springframework.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.3.2.RELEASE</version>
+		</dependency>
+
 		<!-- spring 包 end -->
 
 		<!-- Struts2包Start -->
@@ -209,8 +215,6 @@
 	<!-- 包依赖配置 -->
 
 
-
-
 	<!-- 构建选项配置 -->
 	<build>
 		<plugins>
@@ -236,7 +240,7 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 
 		<!-- 设置版本变量，方便版本升级管理 start -->
-		<org.springframework.version>3.0.2.RELEASE</org.springframework.version>
+		<org.springframework.version>3.2.7.RELEASE</org.springframework.version>
 		<org.apache.solr.version>3.1.0</org.apache.solr.version>
 		<ch.qos.logback.version>1.1.2</ch.qos.logback.version>
 		<org.apache.struts.version>2.3.15.2</org.apache.struts.version>
