--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,26 @@
 		</dependency>
 		<!-- RPC 远程调用框架 -->
 
+		<!-- 阿里微服务框架 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.5.3</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- 阿里微服务框架 -->
+
+		<dependency>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.1</version>
+		</dependency>
+
 	</dependencies>
 	<!-- 包依赖配置 -->
 
